--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,118 +1,132 @@
 .navbar {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #0453BB;
-    font-family: 'Montserrat', sans-serif;
-    height: 100px;
-    position: relative;
-  }
-  
-  .navbarLogo {
-    display: flex;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: 600;
-    color: #ffffff;
-    gap: 10px;
-    padding-left: 20px;
-  }
-  
-  .navbarLogo img {
-    width: 50px;
-  }
-  
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #0453BB;
+  font-family: 'Montserrat', sans-serif;
+  height: 100px;
+  position: fixed;
+  z-index: 1000;
+}
+
+.navbarLogo {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #ffffff;
+  gap: 10px;
+  padding-left: 20px;
+}
+
+.navbarLogo img {
+  width: 50px;
+}
+
+.navbarLinks {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+}
+
+.navbarLinks li {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.navbarLinks li a {
+  text-decoration: none;
+  color: #ffffff;
+  transition: all 0.1s ease;
+}
+
+.navbarLinks li a:hover {
+  border-bottom: 5px ridge #ffffff;
+}
+
+.navbarButton {
+  background-color: #ffffff;
+  color: #0453BB;
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding: 5px 10px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  left: 20px;
+  margin-right: 20px;
+  border: 1px solid #ffffff;
+}
+
+.navbarButton:hover {
+  background-color: transparent;
+  color: #ffffff;
+}
+
+/* Estilos para dispositivos móveis */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  gap: 4px;
+  cursor: pointer;
+  padding-right: 20px;
+}
+
+.hamburger span {
+  width: 25px;
+  height: 3px;
+  background-color: #ffffff;
+  transition: all 0.3s ease;
+}
+
+/* Estilo ativo para o hambúrguer */
+.hamburger span.active:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger span.active:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger span.active:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
   .navbarLinks {
-    display: flex;
-    gap: 20px;
-    list-style: none;
-  }
-  
-  .navbarLinks li {
-    font-size: 1rem;
-    font-weight: 500;
-    transition: all 0.3s ease;
-  }
-  
-  .navbarLinks li a {
-    text-decoration: none;
-    color: #ffffff;
-  }
-  
-  .navbarButton {
-    background-color: #ffffff;
-    color: #0453BB;
-    font-size: 1.2rem;
-    font-weight: 500;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    border: none;
-    left: 20px;
-    margin-right: 20px;
-  }
-  
-  .navbarButton:hover {
+    position: absolute;
+    top: 100px;
+    right: 0px;
     background-color: #0453BB;
-    color: #ffffff;
-    border: 1px solid #ffffff;
-  }
-  
-  /* Estilos para dispositivos móveis */
-  .hamburger {
-    display: none;
     flex-direction: column;
-    gap: 4px;
-    cursor: pointer;
-    padding-right: 20px;
-  }
-  
-  .hamburger span {
-    width: 25px;
-    height: 3px;
-    background-color: #ffffff;
-    transition: all 0.3s ease;
-  }
-  
-  /* Estilo ativo para o hambúrguer */
-  .hamburger span.active:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
-  }
-  
-  .hamburger span.active:nth-child(2) {
+    width: 100%;
+    align-items: center;
+    display: flex;
+    padding: 20px 0;
+
+    /* Escondido inicialmente e posicionado para animação */
+    transform: translateY(-20px);
     opacity: 0;
+    transition: all 0.3s ease-in-out;
+    visibility: hidden;
+    /* Ajuda a ocultar o menu visualmente */
+
+    border-bottom: 8px ridge #ffffff;
   }
-  
-  .hamburger span.active:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
+
+  .navbarLinks.active {
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
   }
-  
-  /* Responsividade */
-  @media (max-width: 768px) {
-    .navbarLinks {
-      position: absolute;
-      top: 100px;
-      right: 0;
-      background-color: #0453BB;
-      flex-direction: column;
-      width: 100%;
-      align-items: center;
-      display: none;
-      padding: 20px 0;
-    }
-  
-    .navbarLinks.active {
-      display: flex;
-    }
-  
-    .navbarButton {
-      display: none;
-    }
-  
-    .hamburger {
-      display: flex;
-    }
+
+  .navbarButton {
+    display: none;
   }
-  
+
+  .hamburger {
+    display: flex;
+  }
+}
