--- a/src/pages/Sections/Introduction/Introduction.module.css
+++ b/src/pages/Sections/Introduction/Introduction.module.css
@@ -1,5 +1,3 @@
-/* src/Sections/HeroSection/HeroSection.module.css */
-
 .heroContainer {
     background-color: #ffffff;
     color: #ffffff;
@@ -7,11 +5,16 @@
     justify-content: center;
     align-items: center;
     padding: 60px 20px;
-    text-align: center;
+    text-align: left;
     background-image: url('../../../utils/assets/background.png');
     background-size: cover;
     background-position: center;
-    min-height: 400px;
+    min-height: 80vh;
+    gap: 10%;
+  }
+
+  .logo {
+    position: relative;
   }
   
   .content {
@@ -25,26 +28,38 @@
   }
   
   .description {
-    font-size: 1.2em;
+    font-size: 1.5em;
     margin-bottom: 20px;
   }
   
   .button {
     background-color: #ffffff;
-    color: #0044cc;
-    border: none;
+    color: #0453BB;
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 1em;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: all 0.3s ease;
+    border-color: #ffffff;
   }
   
   .button:hover {
-    background-color: #f1f1f1;
+    background-color: transparent;
+    color: #ffffff;
   }
   
   @media (max-width: 768px) {
+    .heroContainer {
+      flex-direction: column;
+      text-align: center;
+      gap: 20px;
+      min-height: 75vh;
+    }
+  
+    .logo {
+      width: 150px;
+    }
+    
     .title {
       font-size: 2em;
     }
