--- a/src/pages/Sections/ProcedureList/ProcedureList.module.css
+++ b/src/pages/Sections/ProcedureList/ProcedureList.module.css
@@ -1,26 +1,38 @@
 .procedureListContainer {
-    padding: 40px 20px;
-    text-align: center;
-    background-color: white;
-  }
-  
-  .sectionTitle {
-    font-size: 2em;
-    margin-bottom: 30px;
-    color: #0044cc;
-  }
-  
+  padding: 40px 20px;
+  text-align: left;
+  background-color: white;
+}
+
+.sectionTitle {
+  font-size: 2em;
+  margin-bottom: 30px;
+  color: #0044cc;
+  position: relative;
+  left: 8%;
+  font-weight: bold;
+}
+
+.sectionTitle .icon {
+  width: 40px; /* Ajuste o tamanho do ícone conforme necessário */
+  height: auto;
+  margin-right: 15px; /* Espaçamento entre o ícone e o título */
+}
+
+.steps {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+@media (max-width: 768px) {
   .steps {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 20px;
+    flex-direction: column;
+    align-items: center;
   }
-  
-  @media (max-width: 768px) {
-    .steps {
-      flex-direction: column;
-      align-items: center;
-    }
+
+  .sectionTitle .icon {
+    display: none;
   }
-  
+}
