refactor: Ajustes gerais e Responsividade AgendarConsulta

--- a/src/components/TeamMember/TeamMember.module.css
+++ b/src/components/TeamMember/TeamMember.module.css
@@ -4,8 +4,7 @@
   padding: 150px 20px 20px;
   color: white;
   width: 100%;
-  min-height: 60vh;
-  height: auto;
+  height: 70vh;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   position: relative;
@@ -38,7 +37,7 @@
 }
 
 .memberDescription {
-  font-size: 1.5em;
+  font-size: 1.4em;
   line-height: 1.6;
   word-spacing: 2px;
   padding: 0 20px;
