--- a/src/pages/Sections/DentalProcedures/DentalProcedures.module.css
+++ b/src/pages/Sections/DentalProcedures/DentalProcedures.module.css
@@ -10,8 +10,8 @@
     flex: 1;
     display: flex;
     justify-content: center;
-    max-width: 650px; /* Limite de largura para a imagem */
-    margin-right: 100px; /* Espaço entre a imagem e o texto */
+    max-width: 650px;
+    margin-right: 100px;
   }
   
   .image {
@@ -24,7 +24,7 @@
   .text-container {
     flex: 1;
     padding: 20px;
-    max-width: 700px; /* Limite de largura para o texto */
+    max-width: 700px;
     text-align: left;
   }
   
@@ -50,7 +50,7 @@
     cursor: pointer;
     font-size: 1.1rem;
     transition: all 0.3s ease;
-    letter-spacing:5px;
+    letter-spacing: 5px;
   }
   
   .learn-more-button:hover {
@@ -59,7 +59,6 @@
     border-color: #0453BB;
   }
   
-  /* Estilos para telas menores */
   @media (max-width: 768px) {
     .dental-procedures {
       flex-direction: column;
@@ -67,7 +66,7 @@
     }
   
     .image-container {
-      margin: 0 auto 20px; /* Centraliza e ajusta o espaço */
+      margin: 0 auto 20px;
     }
   
     .text-container h2 {
