--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -2,6 +2,6 @@ body, html{
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
-    background-color: #f0f0f0;
+    background-color: #fff;
     overflow-x: hidden;
 }
