--- a/src/pages/Sections/AgendarConsulta/AgendarConsulta.module.css
+++ b/src/pages/Sections/AgendarConsulta/AgendarConsulta.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #fff;
+  margin-bottom: 50px;
 }
 
 .title {
@@ -130,8 +131,12 @@
 }
 
 .icon {
-  width: 40px;
-  height: 40px;
+  font-size: 1.5rem;
+  color: #4a90e2;
+}
+
+.socialMedia a .icon {
+  font-size: 2rem;
 }
 
 .socialMediaSection {
