--- a/src/pages/Sections/ProcedureList/ProcedureList.module.css
+++ b/src/pages/Sections/ProcedureList/ProcedureList.module.css
@@ -22,8 +22,9 @@
 .steps {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 60px 0;
 }
 
 @media (max-width: 768px) {
