--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,32 +1,33 @@
 .navbar {
-  width: 100%;
+  width: 86vw;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #0453BB;
+  background-color: #0455BF;
   font-family: 'Montserrat', sans-serif;
-  height: 100px;
+  height: 80px;
   position: fixed;
   z-index: 1000;
+  padding: 0 7%;
 }
 
 .navbarLogo {
   display: flex;
   align-items: center;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 600;
   color: #ffffff;
   gap: 10px;
-  padding-left: 20px;
+  /* padding-left: 20px; */
 }
 
 .navbarLogo img {
-  width: 50px;
+  width: 60px;
 }
 
 .navbarLinks {
   display: flex;
-  gap: 20px;
+  gap: 50px;
   list-style: none;
 }
 
@@ -42,20 +43,21 @@
 }
 
 .navbarLinks li a:hover {
-  border-bottom: 5px ridge #ffffff;
+  border-bottom: 1px solid #ffffff;
+  padding-bottom: 2px;
 }
 
 .navbarButton {
   background-color: #ffffff;
   color: #0453BB;
-  font-size: 1.2rem;
-  font-weight: 500;
-  padding: 5px 10px;
-  border-radius: 20px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  padding: 6px 12px;
+  border-radius: 12px;
   cursor: pointer;
   transition: all 0.3s ease;
   left: 20px;
-  margin-right: 20px;
+  /* margin-right: 20px; */
   border: 1px solid #ffffff;
 }
 
