--- a/src/components/ProcedureStep/ProcedureStep.module.css
+++ b/src/components/ProcedureStep/ProcedureStep.module.css
@@ -1,12 +1,17 @@
 .step {
-  background-color: #e9f5ff;
-  border-radius: 10px;
-  padding: 20px;
+  /* background-color: #e9f5ff; */
+  border-radius: 2px;
+  padding: 30px;
   text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 25%;
-  height: 200px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  height: 190px;
+  border: 1px solid #0455BF;
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
   transition: transform 0.2s;
+  line-height: 1.2;
 }
 
 .step:hover {
@@ -19,25 +24,27 @@
 
 .icon img {
   position: relative;
-  width: 35px;
-  width: 35px;
+  width: 50px;
 }
 
 .title {
-  font-size: 2.1em;
+  font-size: 1.5em;
   font-weight: bold;
   margin-bottom: 10px;
-  color: #0044cc;
+  color: #0455BF;
 }
 
 .description {
-  font-size: 0.9em;
-  color: #666666;
+  font-size: 1em;
+  font-weight: 500;
+  color: #0455BF;
 }
 
 .highlight {
-  background-color: #007bff;
+  background-color: #0455BFcc;
   color: white;
+  height: 210px;
+  border: 1px solid #0455BFcc;
 }
 
 .highlight .title {
