--- a/src/pages/Sections/AgendarConsulta/AgendarConsulta.module.css
+++ b/src/pages/Sections/AgendarConsulta/AgendarConsulta.module.css
@@ -1,14 +1,15 @@
 .container {
-  padding: 20px;
+  padding: 0 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #fff;
   margin-bottom: 50px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 2.4rem;
   color: #4a90e2;
   margin-bottom: 20px;
   text-align: center;
@@ -27,7 +28,7 @@
   align-items: center;
   gap: 40px;
   width: 100%;
-  max-width: 1200px;
+  /* max-width: 1200px;  */
 }
 
 .form {
@@ -35,17 +36,33 @@
   flex-direction: column;
   gap: 20px;
   width: 100%;
-  max-width: 600px;
+  max-width: 750px;
 }
 
 .input,
 .textarea {
   width: 100%;
-  padding: 10px;
+  padding: 15px;
   border: 2px solid #4a90e2;
   border-radius: 8px;
   font-size: 1rem;
   box-sizing: border-box;
+  height: 60px;
+}
+
+::placeholder {
+  color: #4a90e2;
+  opacity: 1;
+  /* Firefox */
+  font-size: 1rem !important;
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+::-ms-input-placeholder {
+  /* Edge 12-18 */
+  color: #4a90e2;
+  font-size: 1rem !important;
+  font-family: 'Montserrat', sans-serif !important;
 }
 
 .input:focus,
@@ -57,17 +74,18 @@
 .textarea {
   resize: none;
   height: 100px;
+  font-size: 1rem;
 }
 
 .submitButton {
   width: 30%;
-  padding: 5px;
+  padding: 10px;
   background-color: transparent;
   color: #4a90e2;
   border: 2px solid #4a90e2;
   border-radius: 10px;
   cursor: pointer;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   transition: all 0.3s ease;
   letter-spacing: 2px;
   position: relative;
@@ -83,27 +101,37 @@
 .contactSection {
   display: flex;
   flex-direction: column;
+  justify-content: start;
   gap: 20px;
   text-align: left;
-  max-width: 600px;
+  max-width: 700px;
   color: #4a90e2;
   font-weight: 500;
+  min-height: 500px;
 }
 
 .contactResume {
-  margin-bottom: 35px;
+  margin-bottom: 30px;
+  line-height: 1.2;
+}
+
+.contactResume p {
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 
 .contactTitle {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: #4a90e2;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  letter-spacing: 1.5px;
 }
 
 .contactRow {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 20px;
 }
 
 .contactItem {
@@ -120,7 +148,7 @@
 
 .contactItem h4 {
   margin: 0;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   color: #4a90e2;
   font-weight: 500;
 }
@@ -131,7 +159,7 @@
 }
 
 .icon {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: #4a90e2;
 }
 
@@ -140,7 +168,7 @@
 }
 
 .socialMediaSection {
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .socialTitle {
@@ -152,7 +180,7 @@
 
 .socialMedia {
   display: flex;
-  gap: 10px;
+  gap: 30px;
 }
 
 @media (max-width: 767px) {
