--- a/src/pages/Sections/Footer/Footer.module.css
+++ b/src/pages/Sections/Footer/Footer.module.css
@@ -2,7 +2,7 @@
 .footer {
     background-color: #000;
     color: #fff;
-    padding: 2rem 3rem;
+    padding: 2rem 10%;
     font-family: 'Arial', sans-serif;
 }
 
@@ -37,7 +37,7 @@
 
 /* Estilos dos ícones de redes sociais */
 .socialIcons a {
-    margin-right: 0.5rem;
+    margin-right: 1rem;
 }
 
 .socialIcon {
