--- a/src/pages/Sections/DentalProcedures/DentalProcedures.module.css
+++ b/src/pages/Sections/DentalProcedures/DentalProcedures.module.css
@@ -41,7 +41,7 @@
   margin: 40px 0 30px 0;
 }
 
-a {
+.a {
   background-color: #0455BF;
   color: white;
   padding: 20px 50px;
@@ -61,7 +61,7 @@ a {
 }
 
 
-a:hover {
+.a:hover {
   color: #0455BF;
   transition: all 0.1s ease;
   border-color: #0455BF;
