--- a/src/pages/Sections/Introduction/Introduction.module.css
+++ b/src/pages/Sections/Introduction/Introduction.module.css
@@ -35,7 +35,7 @@
   margin-bottom: 20px;
 }
 
-a {
+.a {
   background-color: #0455BF;
   color: white;
   padding: 20px 50px;
@@ -54,7 +54,7 @@ a {
   }
 }
 
-a:hover {
+.a:hover {
   color: #0455BF;
   transition: all 0.1s ease;
   border-color: #ffffff;
